<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestProject</string>
    <string name="action_settings">Settings</string>
    <string name="text_message"></string>
    <string name="mediaToggleOn">Turn Music Off</string>
    <string name="mediaToggleOff">Turn Music On</string>
    <string name="tutorialTextHint">Add text here</string>
    <string name="actionBarEntityName">ENTITY</string>
    <string name="inputButtonName">Send</string>
    <string name="internetButton">Query Google</string>
    <string name="display_message_activity_title">DisplayMessageActivity</string>
    <string name="title_activity_internet">InternetActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="twitter_query">Query Twitter</string>
    <string name="onClick">onClick</string>
    <string name="title_activity_twitter_parser">TwitterParser</string>
    <string name="title_tweet_list">Tweets</string>
    <string name="title_tweet_detail">Tweet Detail</string>

</resources>