<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/tutorialText"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="22dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/tutorialTextHint" 
        android:inputType="text"/>

    <Button
        android:id="@+id/inputButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputButtonName"
        android:onClick="@string/onClick"/>

    <Button
        android:id="@+id/internetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internetButton" 
        android:onClick="@string/onClick"/>

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter_query" 
        android:onClick="@string/onClick"/>
    
	<ToggleButton
        android:id="@+id/mediaToggle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="26dp"
        android:onClick="@string/onClick"
        android:textOff="@string/mediaToggleOff"
        android:textOn="@string/mediaToggleOn" />
</LinearLayout>